create rule endpoints(#199)