@@ -5,6 +5,7 @@ import de.tum.in.www1.hephaestus.activity.model.*;
 import de.tum.in.www1.hephaestus.gitprovider.issue.Issue;
 import de.tum.in.www1.hephaestus.gitprovider.pullrequest.PullRequest;
 import de.tum.in.www1.hephaestus.gitprovider.pullrequest.PullRequestRepository;
+import de.tum.in.www1.hephaestus.gitprovider.repository.RepositoryRepository;
 import de.tum.in.www1.hephaestus.gitprovider.user.User;
 import de.tum.in.www1.hephaestus.gitprovider.user.UserRepository;
 import jakarta.transaction.Transactional;
@@ -35,6 +36,12 @@ public class ActivityService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private PullRequestBadPracticeRuleRepository pullRequestBadPracticeRuleRepository;
+
+    @Autowired
+    private RepositoryRepository repositoryRepository;
+
     @Transactional
     public ActivityDTO getActivity(String login) {
         logger.info("Getting activity for user with login: {}", login);
@@ -55,10 +62,8 @@ public class ActivityService {
                     Collectors.collectingAndThen(Collectors.toList(), list ->
                         list
                             .stream()
-                            .map(PullRequestBadPractice::getType)
-                            .distinct()
-                            .map(PullRequestBadPracticeDTO::fromPullRequestBadPracticeType)
-                            .collect(Collectors.toList())
+                            .map(PullRequestBadPracticeDTO::fromPullRequestBadPractice)
+                                .toList()
                     )
                 )
             );
@@ -71,9 +76,7 @@ public class ActivityService {
                     pullRequestBadPracticesMap.getOrDefault(
                         pullRequest,
                         List.of(
-                            PullRequestBadPracticeDTO.fromPullRequestBadPracticeType(
-                                PullRequestBadPracticeType.UNCHECKED_CHECKBOX
-                            )
+                            new PullRequestBadPracticeDTO("Unchecked checkbox.", "The checkbox is not checked.", false)
                         )
                     )
                 )
@@ -104,5 +107,33 @@ public class ActivityService {
             .flatMap(List::stream)
             .map(PullRequestBadPracticeDTO::fromPullRequestBadPractice)
             .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public List<PullRequestBadPracticeRuleDTO> getRules(String repository) {
+        logger.info("Getting rules for repository: {}", repository);
+
+        return pullRequestBadPracticeRuleRepository.findByRepositoryName(repository)
+                .stream()
+                .map(PullRequestBadPracticeRuleDTO::fromPullRequestBadPracticeRule)
+                .toList();
+    }
+
+    @Transactional
+    public PullRequestBadPracticeRuleDTO createOrUpdateRule(PullRequestBadPracticeRuleDTO rule) {
+        logger.info("Creating rule: {}", rule);
+
+        PullRequestBadPracticeRule existingOrNewRule = pullRequestBadPracticeRuleRepository.findById(rule.id()).orElse(null);
+        if (existingOrNewRule == null) {
+            existingOrNewRule = new PullRequestBadPracticeRule();
+            repositoryRepository.findByNameWithOwner(rule.repository().nameWithOwner()).ifPresent(existingOrNewRule::setRepository);
+        }
+        existingOrNewRule.setTitle(rule.title());
+        existingOrNewRule.setDescription(rule.description());
+        existingOrNewRule.setConditions(rule.conditions());
+        existingOrNewRule.setActive(rule.active());
+
+        return  PullRequestBadPracticeRuleDTO.fromPullRequestBadPracticeRule(
+                pullRequestBadPracticeRuleRepository.save(existingOrNewRule));
     }
 }
